@@ -45,6 +45,7 @@ export(cts_compinfo)
 export(cts_convert)
 export(cts_from)
 export(cts_to)
+export(ec_query)
 export(etox_basic)
 export(etox_targets)
 export(etox_tests)
