@@ -2,6 +2,7 @@ webchem 0.0.6
 ======================
 
 NEW FEATURES
+* ec_query() queries data from EnviChem.
 * added cts_to() and cts_from() to retrieve possible ids that can be queried.
 * cts_*(), pp_query(), cir_query(), get_cid(), get_etoxid(), etox_*(), pan_query() get_wdid(), aw_query(), get_csid(), cs_prop(), cs_compinfo() can handle multiple inputs
 * pc_prop() queries properties and pc_synonmy() synonyms from PUG-REST.
